zeit.securitypolicy changes
===========================

0.6.1 (unreleased)
------------------

- Using versions from the ZTK.

- Syndication-Manager (``@@syndication_manager``) ist nicht mehr verfügbar
  (#6878).


0.6.0 (2009-10-19)
------------------

- Nur Producer sehen Navigationsbaum in der Seitenspalte (#6353).


0.5.1 (2009-08-18)
------------------

- Tests repariert, nach dem sich der Name des Folder-Add-Views geändert hat.

0.5 (2009-05-17)
----------------

- Nur noch Producer dürfen Ordner umbenennen (#5319).

- Anpassungen für zeit.cms 1.20

- Alle ``test.py`` nach ``tests.py`` umbenannt.

- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.


0.4 (2009-03-23)
----------------

- Auf zeit.cms 1.16.1 angepasst.

0.3 (2009-01-22)
----------------

- Grafiktool (zeit.imp) integriert.

0.2 (2008-11-24)
----------------

- Redakteure dürfen wieder Dinge im Repository ändern.

0.1 (2008-11-21)
----------------

- Extra Rolle für CvDs (kann Sperren stehlen).
- Extra Rolle für SEO (damit wird normalen Redakteuren das SEO-Tab nicht mehr
  angezeigt).