@@ -9,6 +9,7 @@ zeit.securitypolicy changes
 - Syndication-Manager (``@@syndication_manager``) ist nicht mehr verfügbar
   (#6878).
 
+- Editors may edit Brightcove Videos/Playlists.
 
 0.6.0 (2009-10-19)
 ------------------
